--- a/cancer_poster.qmd
+++ b/cancer_poster.qmd
@@ -117,7 +117,7 @@ p <- p +
     aes(y = Female, label = formatC(abs(Female), format = "d", big.mark = ",")),
     position = position_nudge(x = -0.05, y = 0),  # Nudge slightly to the left
     hjust = 1.1, 
-    size = 4,
+    size = 3,
     fill = "white",
     label.size = 0 
   ) +
@@ -125,10 +125,11 @@ p <- p +
     aes(y = Male, label = formatC(Male, format = "d", big.mark = ",")),
     position = position_nudge(x = 0.05, y = 0),  # Nudge slightly to the right
     hjust = -0.1,
-    size = 4,
+    size = 3,
     fill = "white",
     label.size = 0 
   )
+
 ```
 
 # Introduction
@@ -226,26 +227,26 @@ In our project, we employed Quarto along with the R programming language. We int
 p <- p + 
   theme_minimal() +
   theme(
-    axis.text.y = element_text(size = 14),
-    axis.text.x = element_text(size = 14),
-    axis.title.y = element_text(size = 16),
-    axis.title.x = element_text(size = 16),
-    plot.title = element_text(size = 20, face = "bold"),
-    plot.subtitle = element_text(size = 14), 
-    legend.title = element_text(size = 14, hjust = 0.5),
-    legend.text = element_text(size = 14),
+    axis.text.y = element_text(size = 8),
+    axis.text.x = element_text(size = 8),
+    axis.title.y = element_text(size = 8),
+    axis.title.x = element_text(size = 8),
+    plot.title = element_text(size = 12, face = "bold"),
+    plot.subtitle = element_text(size = 10), 
+    legend.title = element_text(size = 8, hjust = 0.5),
+    legend.text = element_text(size = 8),
     legend.position = "top",
-    plot.caption = element_text(size = 12),
+    plot.caption = element_text(size = 8),
     panel.grid.major.y = element_line(color = "white"),  # Darker major grid lines
     panel.grid.major.x = element_line(color = "grey80"),  # Darker major grid lines
     panel.grid.minor.x = element_line(color = "grey80"),  # Darker major grid lines
   ) +
   theme(
-    plot.subtitle = element_text(margin = margin(b = 10)),
-    plot.margin = margin(t = 10, r = 10, b = 10, l = 10),
-    axis.title.x = element_text(margin = margin(t = 15, r = 10, b = 10, l = 10)),
-    axis.title.y = element_text(margin = margin(t = 10, r = 15, b = 10, l = 10)),
-    plot.caption = element_text(margin = margin(t = 10, r = 10, b = 10, l = 10)),
+    #plot.subtitle = element_text(margin = margin(b = 10)),
+    # plot.margin = margin(t = 10, r = 10, b = 10, l = 10),
+    # axis.title.x = element_text(margin = margin(t = 15, r = 10, b = 10, l = 10)),
+    # axis.title.y = element_text(margin = margin(t = 10, r = 15, b = 10, l = 10)),
+    #plot.caption = element_text(margin = margin(t = 10, r = 10, b = 10, l = 10)),
     legend.title = element_blank()
   )
 
